--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,10 @@
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
-
+            </intent-filter>
+            <intent-filter>
                 <data android:scheme="@string/app_scheme"/>
+                <action android:name="android.intent.action.VIEW"/>
             </intent-filter>
         </activity>
 
