--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'com.android.application'
-
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+}
 
 android {
+    namespace 'jp.elestyle.androidapp.elepaydemoapp'
     signingConfigs {
         config {
             keyAlias 'demokey'
@@ -13,11 +13,11 @@ android {
             storePassword 'password'
         }
     }
-    compileSdkVersion 28
+    compileSdk 35
     defaultConfig {
         applicationId "jp.elestyle.androidapp.elepaydemoapp"
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion 23
+        targetSdk 35
         versionCode 14
         versionName "1.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -33,32 +33,34 @@ android {
     }
 
     // Exclude the debug config file.
-    android.applicationVariants.all { var ->
+    android.applicationVariants.configureEach { var ->
         if (var.buildType.name == 'release') {
             var.mergeAssets.doLast {
                 delete(fileTree(dir: var.mergeAssets.outputDir, includes: ['config.json']))
             }
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.google.android.material:material:1.1.0-alpha02'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.basgeekball:awesome-validation:4.1'
-    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.6.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+//    implementation 'com.basgeekball:awesome-validation:4.1'
 
     // ElePay
-    implementation 'jp.elestyle.androidapp:elepay:1.2.0'
-
-    // Glide: a image resource loader
-    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    implementation 'jp.elestyle.androidapp:elepay:3.4.0'
 }
 
 repositories {
